themes/hugo-theme-blueberry-detox/static/css/main.css
/* ... */
@media (max-width: 550px) {
    h1 {
    font-size: 50px;
}
}h2 {
    font-size: 48px;
    font-size: 2.6667rem;
    margin-bottom: 0.61875em;
}
@media (max-width: 550px) {
    h2 {
    font-size: 43px;
}
}h3 {
    font-size: 36px;
    font-size: 2rem;
    margin-bottom: 0.825em;
}
@media (max-width: 550px) {
    h3 {
    font-size: 28px;
}
img{
	    max-width:100%;
	    height:auto;
	}
}h4 {
    font-size: 24px;
    font-size: 1.3333333333333333rem;
    margin-bottom: 1.2375em;
}
@media (max-width: 550px) {
    h4 {
    font-size: 22px;
}
}h5 {
    font-size: 21px;
    font-size: 1.16667rem;
    margin-bottom: 1.4142857142857141em;
}
@media (max-width: 550px) {
    h5 {
    font-size: 19px;
}
}h6 {
    font-size: 18px;
    font-size: 1rem;
    margin-bottom: 1.65em;
}
@media (max-width: 550px) {
    h6 {
    font-size: 15px;
}
}p {
    margin: auto auto 1.5em;
}
a {
    color: #444444;
    text-decoration: none;
    border-bottom:  3px solid #40b77b ;
    background: transparent;
    line-height: inherit;
    -webkit-transition: color .1s ease-out;
    -webkit-transition-property: color;
    -webkit-transition-duration: .1s;
    -webkit-transition-timing-function: ease-out;
    -webkit-transition-delay: initial;
    -moz-transition: color .1s ease-out;
    -o-transition: color .1s ease-out;
    -ms-transition: color .1s ease-out;
    transition: color .1s ease-out;
    transition-property: color;
    transition-duration: .1s;
    transition-timing-function: ease-out;
    transition-delay: initial;
}
a:hover {
   color: #444444;
    background-color: #d8f0e4!important;
}
p a, p a:visited {
    line-height: inherit;
}
 ul, ol {
    margin-top: 0;
    margin-bottom: 1.5em;
    list-style-position: inside;
}
ul ul, ul ol, ol ul, ol ol {
    margin-bottom: 0;
}
dt {
    font-weight: bold;
}
dd {
    margin-left: 0;
}
em, i {
    font-style: italic;
    line-height: inherit;
}
strong, b {
    line-height: inherit;
}
small, .small {
    font-size: 75%;
    font-weight: normal;
    line-height: 1;
}
u, ins {
    text-decoration: none;
}
blockquote:before, blockquote:after, q:before, q:after {
    content: "";
    content: none;
}
blockquote {
    max-width: 100%;
    border-left: 5px solid #e6e6e6;
    margin: 1.5em 0;
}
blockquote, q {
    quotes: none;
    font-size: 125%}
blockquote>p {
    padding: 15px;
}
cite {
    font-style: normal;
}
*, *:before, *:after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
html {
    margin: 0;
    padding: 0;
    font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 90%;
    line-height: 1.95;
    font-weight: thin;
    overflow-y: scroll;
    min-height: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
@media (max-width: 550px) {
    html {
    font-size: 15px;
}
}body {
    background-color: #fff !important;
    padding: 0;
    color: #333;
    min-height: 100%;
    width: 100%;
    *zoom: 1;
    -webkit-font-smoothing: antialiased;
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    -o-hyphens: auto;
    hyphens: auto;
    word-wrap: break-word;
}
body:before, body:after {
    content: "";
    display: table;
}
body:after {
    clear: both;
}
@media (max-width: 550px) {
    body {
    font-size: 15px;
}
}.container {
    width: 90%;
    max-width: 1000px;
    margin: auto;
}
.containerheader {
     width: 100%;
    display: inline-block;
}
.containerout {
     width: 14%;
     display:inline-block;   
     margin:auto;
     text-align:left;
     font-size:12px;
     padding-left:3px;
    color:#b1b1b1;
    border-left: thick solid #444444;
}
.nav {
    list-style: none;
    margin-left: 0;
    padding-left: 0;
    *zoom: 1;
}
.nav:before, .nav:after {
    content: "";
    display: table;
}
.nav:after {
    clear: both;
}
.nav>li, .nav>li>a {
    display: inline-block;
    *display: inline;
    zoom: 1;
}
img, embed, object, video {
    display: block;
    max-width: 100%;
    height: auto;
    margin:  0 auto;
}
img {
    -ms-interpolation-mode: bicubic;
    vertical-align: left;
    font-style: italic;
}
a img {
    border: 0;
}

figure>img {
    display: block;
}
audio, canvas, img, video {
    vertical-align: middle;
}
.btn, button, input[type="submit"], input[type="reset"], input[type="button"] {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    white-space: nowrap;
    margin: 0;
    background-image: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    font-family: inherit;
    line-height: 1.65;
    text-align: center;
    text-decoration: none;
    color: #fff;
    border: 1px solid transparent;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    padding: 15px 20px;
}
.btn:hover, .btn:focus, button:hover, button:focus, input[type="submit"]:hover, input[type="submit"]:focus, input[type="reset"]:hover, input[type="reset"]:focus, input[type="button"]:hover, input[type="button"]:focus {
    background-color: #3d8c38;
    border: 1px solid transparent;
    color: #fff;
    text-decoration: none;
    border-bottom: none;
}
.btn:active, button:active, input[type="submit"]:active, input[type="reset"]:active, input[type="button"]:active {
    outline: none;
    background-image: none;
    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.15);
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.15);
}
.btn::-moz-focus-inner {
    border: 0;
    padding: 0;
}
.btn-primary {
    background-color: #4db146;
    border-bottom: #3d8c38;
}
.btn-secondary {
    border: solid 1px #b3b3b3;
    color: #333;
}
.btn-secondary:hover, .btn-secondary:focus {
    background-color: #e6e6e6;
    color: #333;
    border: solid 1px #b3b3b3;
}
select, input, textarea {
    color: #333;
}
fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}
/* ... */

